--- a/index.html
+++ b/index.html
@@ -1,2 +1,54 @@
 #spyder-project
-Project Website
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Spyder-Project</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #0a0a0a;
+      color: #f5f5f5;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+    header {
+      font-size: 2.5rem;
+      font-weight: bold;
+      margin-bottom: 1rem;
+      color: #00ff99;
+    }
+    p {
+      font-size: 1.2rem;
+      text-align: center;
+      max-width: 600px;
+    }
+    .btn {
+      background-color: #00ff99;
+      color: #0a0a0a;
+      padding: 10px 20px;
+      margin-top: 20px;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: transform 0.2s ease;
+    }
+    .btn:hover {
+      transform: scale(1.05);
+    }
+  </style>
+</head>
+<body>
+  <header>Spyder-Project</header>
+  <p>Welcome to Spyder-Project — a place for innovation, exploration, and building the future. Stay tuned for updates and exciting features coming soon.</p>
+  <button class="btn" onclick="alert('Thanks for checking out Spyder-Project!')">Learn More</button>
+</body>
+</html>
+
